test cases updated